add method in js files.

--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <script src="script.js" defer></script>
 </head>
 <body>
-    
+    <h1>Hello World! is a basic title of HTML World!</h1>
 </body>
 </html>
